# physical-ai-toolchain

./: .cspell.json  .gitignore  CONTRIBUTING.md  codecov.yml  package.json  pyproject.toml  setup-dev.sh
.copilot-tracking/research/2026-06-19/: pr-regression-safety-research.md
.cspell/: general-technical.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: dependabot-pr-reviewer.agent.md
.github/aw/: actions-lock.json
.github/instructions/: vex-authoring.instructions.md
.github/scripts/: container-cve-remediation.sh  discover-base-images.sh
.github/workflows/: aw-dependabot-pr-review.lock.yml  aw-dependabot-pr-review.md  check-binary-integrity.yml  check-hve-core-freshness.yml  codeql-analysis.yml  container-cve-remediation.yml  container-scan.yml  copilot-setup-steps.yml  dast-zap-scan.yml  dataviewer-backend-pytests.yml  dataviewer-frontend-tests.yml  dependabot-auto-merge.yml  dependency-pinning-scan.yml  deploy-docs.yml  docusaurus-tests.yml  evaluation-pytests.yml  fuzz-regression-tests.yml  gitleaks-scan.yml  main.yml  pr-validation.yml  pytest-data-pipeline.yml  pytest-dm-tools.yml  pytest-inference.yml  pytest-shared-ci.yml  pytest-training.yml  python-lint.yml  scorecard.yml  smoke-cpu.yml  spike-control-clean.yml  spike-vuln-01-injection-pr-title.yml  spike-vuln-02-injection-issue-comment.yml  spike-vuln-03-untrusted-checkout-exec.yml  spike-vuln-04-unpinned-action.yml  spike-vuln-05-broad-permissions.yml  spike-vuln-06-injection-head-ref.yml  spike-vuln-07-injection-github-script.yml  spike-vuln-08-untrusted-checkout-write.yml  spike-vuln-09-env-laundered-eval.yml  spike-vuln-10-unpinned-third-party.yml  spike-vuln-11-missing-permissions.yml  (+5 more)
data-management/scene-aligner/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data-management/scene-aligner/docker/: Dockerfile
data-management/scene-aligner/src/scene_aligner/: __init__.py  aligner.py  episodes.py
data-management/scene-aligner/src/scene_aligner/static/: aligner.css  aligner.html  aligner.js
data-management/scene-aligner/src/scene_aligner_dev/: __init__.py  fake_camera.py
data-management/scene-aligner/tests/: __init__.py  test_cache.py  test_episodes.py  test_issues.py  test_safe_paths.py  test_score.py  test_state_payload.py
data-management/specifications/: viewer-deployment.specification.md
data-management/viewer/: docker-compose.yml  pyproject.toml
data-management/viewer/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
data-management/viewer/frontend/: .dockerignore  Dockerfile  nginx.conf.template  package-lock.json  package.json
data-pipeline/: pyproject.toml
docs/contributing/: component-updates.md
docs/docusaurus/: package-lock.json  package.json
docs/evaluation/: osmo-evaluation.md
docs/infrastructure/: cluster-setup.md  manage-node-pools.md
docs/operations/: troubleshooting.md
docs/recipes/data-collection/: preparing-datasets-for-training.md
docs/reference/: copilot-artifacts.md  scripts-examples.md  workflow-templates-osmo.md
docs/security/: README.md  workflow-permissions.md
docs/training/: azureml-training.md  lerobot-training.md  osmo-training.md
evaluation/: .amlignore  pyproject.toml
evaluation/sil/: evaluation.sh  hf_revision.py  infer.sh  play.py  play_policy.py  policy_evaluation.py  policy_runner.py
evaluation/sil/docker/: Dockerfile.lerobot-eval  pyproject.toml  (+1 more)
evaluation/tests/: conftest.py  test_policy_evaluation.py  test_policy_runner.py  test_run_local_lerobot_eval.py  test_test_lerobot_eval.py
evaluation/vlm_judge/: api.py  backend.py  openai_shim.py  policy_eval.py  pyproject.toml  run.py  service.py
fleet-deployment/inference/: act_inference_node.py
infrastructure/: README.md
infrastructure/setup/: 01-deploy-robotics-charts.sh  03-deploy-osmo.sh  README.md
infrastructure/terraform/: variables.tf
presentations/pr-regression-safety/: .gitignore  BUILD.md  PRESENTATION_SPEC.md  README.md  build_video.sh  deck.yaml  gen_content.py  narration-script.md  slides_src.py
scripts/: README.md  dependabot-auto-merge.sh  update-chart-hashes.sh
scripts/ci/: Add-ReleaseVerificationNotes.ps1  Close-ReleaseMilestone.ps1  Install-Gitsign.ps1  New-SignedReleaseTag.ps1  New-SigningArtifacts.ps1  Update-ChangelogMsDate.ps1
scripts/lib/: common.sh
scripts/linting/: ConvertTo-JUnitXml.ps1
scripts/security/: Invoke-DependencyPinningWorkflow.ps1  Test-DangerousWorkflow.ps1  Test-DependencyPinning.ps1  Test-HveCoreFreshness.ps1  Test-WorkflowPermissions.ps1  check_hf_pins.py
scripts/setup/: install-actionlint.sh
shared/ci/: README.md  append-release-verification-notes.sh  create-signing-artifacts.sh  generate-dependency-diff.py  smoke-docker.sh  smoke-image.sh  smoke-import.sh
tests/e2e/: _aml.py  _common.py  _lerobot_dataset.py  _osmo.py  _vla_dataset.py  conftest.py  test_e2e_aml_il_eval.py  test_e2e_aml_il_lifecycle.py  test_e2e_aml_rl_eval.py  test_e2e_aml_rl_lifecycle.py  test_e2e_osmo_il_eval.py  test_e2e_osmo_il_lifecycle.py  test_e2e_osmo_il_training.py  test_e2e_osmo_rl_dataset_training.py  test_e2e_osmo_rl_eval.py  test_e2e_osmo_rl_lifecycle.py  test_e2e_osmo_rl_training.py  test_e2e_osmo_vla_finetune.py  test_osmo_helpers.py
training/rl/: pyproject.toml  requirements.txt
training/tests/: test_check_hf_pins.py  test_export_policy.py  test_hashing.py  test_integrity.py  test_lerobot_dataset_assets.py  test_lerobot_download_dataset.py  test_lerobot_train.py  test_skrl_training.py
training/utils/: __init__.py  aml_mirror.py  hashing.py  integrity.py
training/vla/: README.md  pyproject.toml
training/vla/scripts/: groot-train.sh  submit-osmo-lerobot-vla-fine-tuning.sh
training/vla/scripts/groot/: download_blob.py  osmo-train-entry.sh
training/vla/workflows/osmo/: groot-train.yaml
workflows/osmo/: pyproject.toml  requirements-aml-mirror.txt
(+108 files in other folders)
